Commented out background image on landing page as a part of debugging issue with content not displaying correct on mobile devices

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -83,7 +83,7 @@ p {
 /*------------------------------Landing page*/
 
 .landing-body {
-   background-image: url("../images/family-hiking.jpg"); 
+   /*background-image: url("../images/family-hiking.jpg"); */
    background-size: cover;
    background-repeat: no-repeat;
    height: 100vh;
